--- a/index.html
+++ b/index.html
@@ -103,10 +103,12 @@ const specialist = {
               <div class="stat-number" data-target="6">0</div>
               <div class="stat-label">Years of Experience</div>
             </div>
-            <div class="stat-card" data-aos="fade-up" data-aos-delay="100">
-              <div class="stat-number" data-target="35+">0</div>
-              <div class="stat-label">Projects Completed</div>
+          <div class="stat-card" data-aos="fade-up" data-aos-delay="100">
+            <div class="stat-number">
+              <span data-target="35">0</span><span>+</span>
             </div>
+          <div class="stat-label">Projects Completed</div>
+         </div>
             <div class="stat-card" data-aos="fade-up" data-aos-delay="200">
               <div class="stat-number" data-target="25">0</div>
               <div class="stat-label">Million $ Impact</div>
